objects/Service_Contract_Renewal_Opportunity_Map__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reinstatement Service Contracts</relationshipLabel>
        <relationshipName>Service_Contract_Renewal_Opportunity_Map</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipName>Service_Contract_Renewal_Opportunity_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Reinstatement Opportunities</relationshipLabel>
        <relationshipName>Service_Contract_Renewal_Opportunity_Map</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SC Renewal Opp Map</label>
    <nameField>
        <displayFormat>SC-OP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Renewal Opportunity Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>